dev/prospectio-front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prospectio-front-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-scheme: https
spec:
  rules:
    - host: prospectio.front.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prospectio-front
                port:
                  number: 5173
    - host: 37ab8f58a5e6.ngrok-free.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prospectio-front
                port:
                  number: 5173
